changed css formatting to fix column spacing issue

--- a/recipe/css/styles.css
+++ b/recipe/css/styles.css
@@ -52,17 +52,20 @@ table {
 /* --- Basic Display --- */
 
 body {
-	border: 4px solid hsl(0, 85%, 76%);
 	max-width: 100%;
-	height: 990px; /* not the best method, not very responsive and doesn't look great when window is smaller */
-  margin: 5%;
-  padding: 50px;
 	font-family: 'Krub', sans-serif;
 	font-weight: 300;
 	font-size: 15px;
 	color: hsl(0, 0%, 56%);
 	background-color: hsl(340, 100%, 97%);
-	line-height: 30px;
+	line-height: 40px;
+	padding: 20px;
+}
+
+body > div {
+	border: 4px solid hsl(0, 85%, 76%);
+	margin: 4.5%;
+	height: 1130px; not the best method, not very responsive and doesn't look great when window is smaller
 }
 
 
@@ -82,7 +85,8 @@ h4 {
 
 h1 {
   text-align: center;
-  margin: 50px 0 50px 0;
+  margin: 50px;
+	padding: 40px 0 20px 0;
 	font-size: 180%;
 }
 
@@ -114,10 +118,19 @@ a {
 	display: inline-flex;
 	height: 100px;
 	column-gap: 40px;
+	width: 100%;
 }
 
 .row > div {
 	flex: auto;
+}
+
+.column-left {
+	padding-left: 50px;
+}
+
+.column-right {
+	padding-right: 50px;
 }
 
 
